src/test/ui/parser/qpath-in-type-args.stderr
error: qualified paths are not allowed in generic parameters
  --> $DIR/qpath-in-type-args.rs:5:26
   |
LL | struct Bar<'a, Item: Tr, <Item as Tr>::TrAssoc: 'a> {
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: move this constraint to the `where` clause

error: aborting due to previous error

